# Simple-MIDI-Logger

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
