[package]
name = "simple-midi-logger"
version = "0.2.0"
authors = ["kbone <kbonehobby@gmail.com>"]
edition = "2021"
description = "Printing MIDI messages from the selected MIDI input port to stdout."
license = "MIT"

[features]
default = []
jack = ["midir/jack"]
winrt = ["midir/winrt"]

[dependencies]
clap = { version = "3.1.6", features = ["cargo", "derive"] }
midir = { git = "https://github.com/Boddlnagg/midir", rev = "c6aa24867aedee1e02284c5bb6062648f594632d" }
thiserror = "1.0.30"
